Clear stylings for star anchor tags.

--- a/css.css
+++ b/css.css
@@ -43,6 +43,8 @@
 	float: left;
 	position: relative;
 	z-index: 1;
+	text-decoration: none;
+	border: 0;
 }
 .kk-star-ratings .kksr-legend {
 	font-size: 12px;
